--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h2>App Template</h2>
+      <h2>App: {{ title }}</h2>
       <hr/>
 
       <app-servers></app-servers>
