--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,12 @@
+
+
+<button type="button" class="btn btn-primary"
+  [disabled]="!allowNewServer"
+  (click)="onCreateServer()">Add Server</button>
+  <br>
+  <br>
+  <p>{{ serverCreateStatus }}</p>
+<hr/>
+
 <app-server></app-server>
 <app-server></app-server>
