--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,4 +1,11 @@
 
+<label>Server Name</label>
+
+<input type="text" class="form-control"
+  (input)="onUpdateServerName($event)"
+>
+<p>Proposed server name is: {{ serverName }}</p>
+<br>
 
 <button type="button" class="btn btn-primary"
   [disabled]="!allowNewServer"
