server name used in serverCreateStatus

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -9,7 +9,7 @@
   [(ngModel)]="serverName"
 >
 
-<p>Proposed server name is: {{ serverName }}</p>
+<!-- <p>Proposed server name is: {{ serverName }}</p> -->
 <br>
 
 <button type="button" class="btn btn-primary"
