--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,11 @@
 
       <app-servers></app-servers>
 
+      <!-- Assignment 1
+      <app-warning-alert></app-warning-alert>
+      <app-success-alert></app-success-alert>
+      -->
+
     </div>
   </div>
 </div>
