--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,15 @@
     <div class="col-xs-12">
       <h2>App: {{ title }}</h2>
       <hr/>
-      <!-- <app-servers></app-servers> -->
+      <app-servers></app-servers>
 
       <!-- Assignment 1
       <app-warning-alert></app-warning-alert>
       <app-success-alert></app-success-alert>
       -->
 
-      <h3>Assignment 2</h3>
-      <app-assignment2></app-assignment2>
+      <!-- <h3>Assignment 2</h3>
+      <app-assignment2></app-assignment2> -->
 
 
     </div>
